--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav>
             <ul class="nav_list">
                 <li>
-                    <a href="index.html">HOME</a>
+                 
+                    <a href="index.html" class="current">HOME</a>
                 </li>
                 <li>
                     <a href="news.html">NEWS</a>
@@ -33,7 +34,8 @@
         <div class="explanation">
             ①【jsにて】現在のページアドレスの取得とナビゲーションのリンク先のアドレスの取得を行う。<br>
             ②【jsにて】一致した場合、その番号の要素に新たなクラスをclassList.addで付与する。<br>
-            ③【cssにて】②で付与するクラスに、背景色や下線などのスタイルを当てる。<br><br>
+            ③【cssにて】②で付与するクラスに、背景色や下線などのスタイルを当てる。<br>
+            ※index.htmlには、最初からクラスをつけておく。読み込み時のアドレスとリンクのアドレスが異なるため。<br><br>
             使用するjs・・・for文、length、href、querySelectorAll
 
         </div>
